--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-form": "^8.3.10",
     "redux-thunk": "^3.1.0",
     "rodal": "^2.0.1",
     "sass": "^1.63.3",
     "styled-components": "^5.3.11",
+    "transition-hook": "^1.5.2",
     "web-vitals": "^3.3.2",
     "yup": "^1.2.0"
   },
