--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@uiw/react-color": "^2.3.0",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "bootstrap": "^5.3.0",
     "chance": "^1.1.11",
     "formik": "^2.4.1",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.7.4",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
