--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "bootstrap": "^5.3.0",
+    "cdbreact": "^1.5.19",
     "chance": "^1.1.11",
+    "chart.js": "^4.4.3",
     "formik": "^2.4.1",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.7.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
