--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.9.0",
     "react-nvd3": "^0.5.7",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.1.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
